# pkg/models/shop.go
@@ -2,6 +2,7 @@ package models
 
 type Shop struct {
 	UUID        string `json:"-" gorm:"unique"`
+	Wallet      string
 	Name        string
 	Logo        string
 	Location    string
@@ -10,4 +11,15 @@ type Shop struct {
 	Description string
 	Rules       string
 	Status      int
+}
+
+type Category struct {
+	ID   int    `json:"-" gorm:"primary_key"`
+	Name string `json:"name" gorm:"unique"`
+}
+
+type SubCategory struct {
+	ID         int `json:"-" gorm:"primary_key"`
+	Name       string
+	CategoryID int
 }
